--- a/artistspages/theweekndpage.html
+++ b/artistspages/theweekndpage.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="../images/zwartIcon.svg">
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    <title>TheWeeknd</title>
+    <title>The Weeknd</title>
 </head>
 <body>
 
@@ -28,7 +28,7 @@
     <div>
       <img src="../images/Artists/TheWeeknd.jpg" alt="Avatar" class="profile-picture">
         <div class="info">
-        <h2 class="full-name">naam</h1>
+        <h2 class="full-name">The Weeknd</h1>
         <p class="genres">
             R&B, Soul, Dance, Electronic
         </p>
@@ -44,7 +44,7 @@
     <h3 class="h3" id="concerts">Scheduled concerts</h3>
 
     <h3 class="h3" id="spotify">Listen now on Spotify!</h3>
-    <iframe class="spotifyProfile" style="border-radius:12px" src="https://open.spotify.com/embed/artist/3PyJHH2wyfQK3WZrk9rpmP?utm_source=generator" width="57%" height="452" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe class="spotifyProfile" style="border-radius:12px" src="https://open.spotify.com/embed/artist/1Xyo4u8uXC1ZmMpatF05PJ?utm_source=generator" width="57%" height="452" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <p id="endend">test</p>
 
 </body>
